--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -326,6 +326,120 @@
 .student-courses-lists-pages .active-ol .course-ol-box {
   visibility: visible;
 }
+.student-courses-lists-pages .course-progress-bar {
+  margin: 0.6rem 0;
+}
+.student-courses-lists-pages .course-progress-bar .progress {
+  height: 0.25rem;
+  background: var(--neutral-color-neutral-30, #E5ECF6);
+  border-radius: 0;
+}
+.student-courses-lists-pages .course-progress-bar .progress .progress-bar {
+  background-color: #FF8515;
+  border-radius: 0;
+}
+.student-courses-lists-pages .course-progress-bar .d-flex {
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 0.5rem;
+}
+.student-courses-lists-pages .course-progress-bar .d-flex h6 {
+  color: #FF8515;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+}
+
+.common-bttn {
+  border-radius: 0.375rem;
+  border: 1px solid #294CFF;
+  background: #294CFF;
+  color: #fff;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  display: inline-block;
+  padding: 0.8rem 2rem;
+}
+
+.course-review-wrap .media.course-review-input-box {
+  align-items: center;
+}
+.course-review-wrap .media.course-review-input-box img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 2rem;
+}
+.course-review-wrap .media.course-review-input-box span.avtar {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  margin-right: 2rem;
+  font-size: 1.5rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #294CFF;
+  color: #fff;
+}
+.course-review-wrap .media.course-review-input-box input {
+  border: 0;
+  background-color: transparent;
+  padding-bottom: 0.2rem;
+  resize: none;
+  border-bottom: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  display: block;
+  width: 70%;
+}
+.course-review-wrap .media.course-review-input-box .form-rev {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.course-review-wrap .media.course-review-input-box .rating-group {
+  display: inline-flex;
+}
+.course-review-wrap .media.course-review-input-box .rating__icon {
+  pointer-events: none;
+}
+.course-review-wrap .media.course-review-input-box .rating__input {
+  position: absolute !important;
+  left: -9999px !important;
+}
+.course-review-wrap .media.course-review-input-box .rating__label {
+  cursor: pointer;
+  padding: 0 0.1em;
+  font-size: 1.2rem;
+}
+.course-review-wrap .media.course-review-input-box .rating__icon--star {
+  color: #4c60ff;
+}
+.course-review-wrap .media.course-review-input-box .rating__icon--none {
+  color: #eee;
+}
+.course-review-wrap .media.course-review-input-box .rating__input--none:checked + .rating__label .rating__icon--none {
+  color: #4c60ff;
+}
+.course-review-wrap .media.course-review-input-box .rating__input:checked ~ .rating__label .rating__icon--star {
+  color: #ddd;
+}
+.course-review-wrap .media.course-review-input-box .rating-group:hover .rating__label .rating__icon--star {
+  color: #4c60ff;
+}
+.course-review-wrap .media.course-review-input-box .rating__input:hover ~ .rating__label .rating__icon--star {
+  color: #ddd;
+}
+.course-review-wrap .media.course-review-input-box .rating-group:hover .rating__input--none:not(:hover) + .rating__label .rating__icon--none {
+  color: #eee;
+}
+.course-review-wrap .media.course-review-input-box .rating__input--none:hover + .rating__label .rating__icon--none {
+  color: #4c60ff;
+}
 
 @media (min-width: 320px) and (max-width: 574px) {
   .student-courses-lists-pages .course-ol-box {
@@ -333,11 +447,43 @@
     top: 16.5%;
     width: 100%;
   }
+  .course-review-wrap .media.course-review-input-box span.avtar {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1rem;
+    margin-right: 1rem;
+  }
+  .common-bttn {
+    padding: 0.5rem 1rem;
+  }
+  .media.course-title {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .media.course-title .common-bttn {
+    margin-top: 0.5rem;
+  }
 }
 @media (min-width: 574px) and (max-width: 767px) {
   .student-courses-lists-pages .course-ol-box {
     left: 0%;
     top: 16.5%;
     width: 100%;
+  }
+  .course-review-wrap .media.course-review-input-box span.avtar {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1rem;
+    margin-right: 1rem;
+  }
+  .common-bttn {
+    padding: 0.5rem 1rem;
+  }
+  .media.course-title {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .media.course-title .common-bttn {
+    margin-top: 0.5rem;
   }
 }
