--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -252,9 +252,10 @@
     }
 }
 
-.student-courses-lists-pages{
-    .course-single-item{
+.student-courses-lists-pages {
+    .course-single-item {
         position: relative;
+
         .btn-ellip {
             position: absolute;
             right: 1rem;
@@ -270,7 +271,7 @@
             color: #fff;
         }
     }
-    
+
     .course-ol-box {
         border-radius: 0.5rem;
         background: var(--background-light-paper, #FFF);
@@ -282,7 +283,7 @@
         height: 115%;
         visibility: hidden;
         transition: ease-in-out .3s;
-    
+
         h5 {
             color: var(--text-light-primary, #212B36);
             font-size: 1.25rem;
@@ -290,7 +291,7 @@
             font-weight: 600;
             line-height: 1.375rem;
         }
-    
+
         span {
             color: var(--text-light-secondary, #637381);
             font-size: 0.875rem;
@@ -300,7 +301,7 @@
             display: block;
             margin: .5rem 0;
         }
-    
+
         p {
             color: var(--text-light-secondary, #637381);
             font-size: 0.875rem;
@@ -308,9 +309,9 @@
             font-weight: 400;
             line-height: 1.375rem;
         }
-    
+
         h6 {
-            color: var(--neutral-color-neutral-90, #101C2D); 
+            color: var(--neutral-color-neutral-90, #101C2D);
             font-size: 0.875rem;
             font-style: normal;
             font-weight: 400;
@@ -318,9 +319,10 @@
             margin-top: 1rem;
             margin-bottom: 0.5rem;
         }
-    
+
         ul {
             margin-top: 1rem;
+
             li {
                 color: var(--neutral-color-neutral-90, #101C2D);
                 font-size: 0.875rem;
@@ -329,13 +331,13 @@
                 line-height: 1.25rem;
                 @include m.df;
                 margin-top: .5rem;
-    
+
                 i {
                     margin-right: 0.5rem;
                 }
             }
         }
-    
+
         a {
             border-radius: 0.375rem;
             background: var(--primary-color-blue, #294CFF);
@@ -343,7 +345,7 @@
             width: 100%;
             text-align: center;
             padding: .75rem 1.5rem;
-            color: #FFF; 
+            color: #FFF;
             font-size: 1rem;
             font-style: normal;
             font-weight: 500;
@@ -353,35 +355,190 @@
             position: absolute;
             left: 5%;
             bottom: 1rem;
-            width: 90%; 
-            &:hover{
+            width: 90%;
+
+            &:hover {
                 background-color: #212B36;
             }
         }
     }
 
-    .active-ol{
+    .active-ol {
         .course-ol-box {
             visibility: visible;
         }
     }
+
+    .course-progress-bar {
+        margin: .6rem 0;
+
+        .progress {
+            height: 0.25rem;
+            background: var(--neutral-color-neutral-30, #E5ECF6);
+            border-radius: 0;
+
+            .progress-bar {
+                background-color: #FF8515;
+                border-radius: 0;
+            }
+        }
+
+        .d-flex {
+            align-items: center;
+            justify-content: space-between;
+            margin-top: 0.5rem;
+
+            h6 {
+                color: #FF8515;
+                font-size: 0.875rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 1.375rem;
+            }
+        }
+    }
 }
 
+.common-bttn {
+    border-radius: 0.375rem;
+    border: 1px solid #294CFF;
+    background: #294CFF;
+    color: #fff;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    display: inline-block;
+    padding: .8rem 2rem;
+}
+
+.course-review-wrap .media.course-review-input-box {
+    align-items: center;
+
+    img {
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-right: 2rem;
+    }
+
+    span.avtar {
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        margin-right: 2rem;
+        font-size: 1.5rem;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #294CFF;
+        color: #fff;
+    }
+    input{
+        border: 0;
+        background-color: transparent;
+        padding-bottom: 0.2rem;
+        resize: none;
+        border-bottom: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+        display: block;
+        width: 70%;
+    }
+
+    .form-rev{
+        @include m.df(space-between);
+
+    }
+
+    
+ .rating-group {
+    display: inline-flex;
+  }
+   .rating__icon {
+    pointer-events: none;
+  }
+   .rating__input {
+    position: absolute !important;
+    left: -9999px !important;
+  }
+   .rating__label {
+    cursor: pointer;
+    padding: 0 0.1em;
+    font-size: 1.2rem;
+  }
+   .rating__icon--star {
+    color: #4c60ff;
+  }
+   .rating__icon--none {
+    color: #eee;
+  }
+   .rating__input--none:checked + .rating__label .rating__icon--none {
+    color: #4c60ff;
+  }
+   .rating__input:checked ~ .rating__label .rating__icon--star {
+    color: #ddd;
+  }
+   .rating-group:hover .rating__label .rating__icon--star {
+    color: #4c60ff;
+  }
+   .rating__input:hover ~ .rating__label .rating__icon--star {
+    color: #ddd;
+  }
+   .rating-group:hover .rating__input--none:not(:hover) + .rating__label .rating__icon--none {
+    color: #eee;
+  }
+   .rating__input--none:hover + .rating__label .rating__icon--none {
+    color: #4c60ff;
+  }
+  
+}
 
 // small phone device
 @include q.responsive(phone) {
-    .student-courses-lists-pages .course-ol-box { 
+    .student-courses-lists-pages .course-ol-box {
         left: 0%;
         top: 16.5%;
-        width: 100%; 
+        width: 100%;
+    }
+    .course-review-wrap .media.course-review-input-box span.avtar {
+        width: 2.5rem;
+        height: 2.5rem;
+        font-size: 1rem; 
+        margin-right: 1rem; 
+    }
+    .common-bttn{
+        padding: .5rem 1rem;
+    }
+    .media.course-title{
+        flex-direction: column;
+        align-items: flex-start;
+        .common-bttn{
+            margin-top: 0.5rem;
+        }
     }
 }
 
 // small phone device
 @include q.responsive(landphone) {
-    .student-courses-lists-pages .course-ol-box { 
+    .student-courses-lists-pages .course-ol-box {
         left: 0%;
         top: 16.5%;
-        width: 100%; 
+        width: 100%;
+    }
+    .course-review-wrap .media.course-review-input-box span.avtar {
+        width: 2.5rem;
+        height: 2.5rem;
+        font-size: 1rem; 
+        margin-right: 1rem; 
+    }
+    .common-bttn{
+        padding: .5rem 1rem;
+    }
+    .media.course-title{
+        flex-direction: column;
+        align-items: flex-start;
+        .common-bttn{
+            margin-top: 0.5rem;
+        }
     }
 }
